--- a/Project Development Phase/Sprint -1/Login/style.css
+++ b/Project Development Phase/Sprint -1/Login/style.css
@@ -49,6 +49,7 @@ body .login_card .direct_login img{
     height: 20px;
 }
 
+body .login_card input[type="email"],
 body .login_card input[type="text"],
 body .login_card input[type="submit"],
 body .login_card input[type="password"] {
@@ -63,8 +64,9 @@ body .login_card input:focus::placeholder {
   color: #dddfe2;
 }
 
+body .login_card input[type="email"]:focus,
 body .login_card input[type="text"]:focus,
-body .login_card input[type="password"]:focus {
+body .login_card input[type="password"]:focus{
   border: 1px solid #B2B2B2;
   outline: 0;
 }
@@ -100,13 +102,15 @@ body .login_card input[type="submit"] {
   cursor: pointer;
 }
 
-body .login_card a {
+body .login_card a,
+body .login_card .github a {
   color: #1877f2;
   text-decoration: none;
   font-size: 14px;
 }
 
-body .login_card a:hover {
+body .login_card a:hover,
+body .login_card .github a:hover {
   text-decoration: underline;
 }
 
@@ -134,7 +138,9 @@ body .login_card button {
   body .login_card {
     width: 100%;
   }
+  body .login_card input[type="email"],
   body .login_card input[type="text"],
+  body .login_card input[type="password"],
   body .login_card input[type="submit"],
   body .login_card .password {
     width: 80%;
