--- a/Project Development Phase/Sprint -1/Register/style.css
+++ b/Project Development Phase/Sprint -1/Register/style.css
@@ -49,6 +49,7 @@ body .login_card .direct_login img{
 }
 
 body .login_card input[type="text"],
+body .login_card input[type="email"],
 body .login_card input[type="submit"],
 body .login_card input[type="password"] {
   padding: 14px 16px;
@@ -63,6 +64,7 @@ body .login_card input:focus::placeholder {
 }
 
 body .login_card input[type="text"]:focus,
+body .login_card input[type="email"]:focus,
 body .login_card input[type="password"]:focus {
   border: 1px solid #B2B2B2;
   outline: 0;
@@ -134,6 +136,7 @@ body .login_card button {
     width: 100%;
   }
   body .login_card input[type="text"],
+  body .login_card input[type="email"],
   body .login_card input[type="submit"],
   body .login_card .password {
     width: 80%;
